Add Optimized TermCounter that skips stop words